# ChangeLog for sci-chemistry/tinker
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/tinker/ChangeLog,v 1.8 2008/01/31 19:53:22 grobian Exp $

  31 Jan 2008; Fabian Groffen <grobian@gentoo.org> ChangeLog:
  Dropped ppc-macos keyword, see you in prefix

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.

*tinker-4.2-r1 (21 Jun 2006)

  21 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; -tinker-4.2.ebuild,
  +tinker-4.2-r1.ebuild:
  (#119142) Make Java frontend work (Josh Nichols).

  21 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; tinker-4.2.ebuild:
  Port to gcc4.

  03 Dec 2005; Donnie Berkholz <dberkholz@gentoo.org>; tinker-4.2.ebuild:
  Note that tinker script has hardcoded blackdown in it. This is needed
  because java-config's exit codes return 0, even on failure.

*tinker-4.2 (03 Dec 2005)

  03 Dec 2005; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +tinker-4.2.ebuild:
  (#35945) New molecular mechanics package. Heavily modified ebuild based on
  that of Jeremy Warren <jwarren@cheesefoam.dyndns.org>.
